--- a/CodingChallenge.UnitTests/CodingChallenge.UnitTests.csproj
+++ b/CodingChallenge.UnitTests/CodingChallenge.UnitTests.csproj
@@ -34,10 +34,23 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.4.3.1\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="FakeItEasy, Version=6.0.0.0, Culture=neutral, PublicKeyToken=eff28e2146d5fd2c, processorArchitecture=MSIL">
+      <HintPath>..\packages\FakeItEasy.6.2.1\lib\net45\FakeItEasy.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.12.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.12.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="StructureMap">
+      <HintPath>..\CodingChallenge.UI\bin\StructureMap.dll</HintPath>
+    </Reference>
+    <Reference Include="StructureMap.Web">
+      <HintPath>..\CodingChallenge.UI\bin\StructureMap.Web.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -46,6 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IOCTest.cs" />
     <Compile Include="LibraryServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -57,6 +71,10 @@
     <ProjectReference Include="..\CodingChallenge.DataAccess\CodingChallenge.DataAccess.csproj">
       <Project>{CE73B7DB-71E0-412E-A584-7FCC5D8D5BAA}</Project>
       <Name>CodingChallenge.DataAccess</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CodingChallenge.UI\CodingChallenge.UI.csproj">
+      <Project>{84D66C7E-1E11-4677-BF01-66DD9544AC96}</Project>
+      <Name>CodingChallenge.UI</Name>
     </ProjectReference>
     <ProjectReference Include="..\CodingChallenge.Utilities\CodingChallenge.Utilities.csproj">
       <Project>{9558db3c-4735-499a-9468-7a7d83fe8e9f}</Project>
